Closed Bug 701273 Opened 14 years ago Closed 14 years ago

prototype mismatch for nsXBLProtoImplProperty and nsXBLProtoImplField (bool vs const bool)

Categories

(Core :: XBL, defect)

x86
Solaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla11

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

Attachments

(1 file)

I got symbol not found error on linking.
Attached patch patchSplinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #573412 - Flags: review?(enndeakin)
Attachment #573412 - Flags: review?(enndeakin) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: