Bug 701273 Fix prototype mismatch for nsXBLProtoImplProperty and nsXBLProtoImplField (bool vs const bool) r=enndeakin